finishes responsivness until ipad-mini

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,10 @@
         ],
         "arrow-spacing": [
             "error", { "before": true, "after": true }
-        ]
+        ],
+        "no-console": 0,
+        "max-len": ["error", { "code": 80 }],
+        "multiline-ternary": ["error", "always"],
+        "no-multi-spaces": "error"
     }
 }
