--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,11 @@
         "no-console": 0,
         "max-len": ["error", { "code": 80 }],
         "multiline-ternary": ["error", "always"],
-        "no-multi-spaces": "error"
-    }
+        "no-multi-spaces": "error",
+        "object-curly-newline": ["error", {
+            "ObjectExpression": "always",
+            "ObjectPattern": { "multiline": true, "minProperties": 3 },
+            "ImportDeclaration": { "multiline": true, "minProperties": 3 },
+            "ExportDeclaration": { "multiline": true, "minProperties": 3 }
+        }]    }
 }
